--- a/app/views/exposures/_form.html.erb
+++ b/app/views/exposures/_form.html.erb
@@ -28,8 +28,8 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :cvss_v2_base_scroe %><br>
-    <%= f.number_field :cvss_v2_base_scroe %>
+    <%= f.label :cvss_v2_base_score %><br>
+    <%= f.number_field :cvss_v2_base_score %>
   </div>
   <div class="field">
     <%= f.label :impact_subscore %><br>
