--- a/app/views/exposures/index.html.erb
+++ b/app/views/exposures/index.html.erb
@@ -7,7 +7,7 @@
       <th>Published</th>
       <th>Cvss severity</th>
       <th>Title</th>
-      <th>Cvss v2 base scroe</th>
+      <th>Cvss v2 base score</th>
       <th>Impact subscore</th>
       <th>Exploitability subscore</th>
       <th>Access vector</th>
@@ -29,7 +29,7 @@
         <td><%= exposure.published %></td>
         <td><%= exposure.cvss_severity %></td>
         <td><%= exposure.title %></td>
-        <td><%= exposure.cvss_v2_base_scroe %></td>
+        <td><%= exposure.cvss_v2_base_score %></td>
         <td><%= exposure.impact_subscore %></td>
         <td><%= exposure.exploitability_subscore %></td>
         <td><%= exposure.access_vector %></td>
