--- a/app/views/exposures/show.html.erb
+++ b/app/views/exposures/show.html.erb
@@ -21,8 +21,8 @@
 </p>
 
 <p>
-  <strong>Cvss v2 base scroe:</strong>
-  <%= @exposure.cvss_v2_base_scroe %>
+  <strong>Cvss v2 base score:</strong>
+  <%= @exposure.cvss_v2_base_score %>
 </p>
 
 <p>
